# equity-factor-research

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  EXPERIMENT_LOG.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml
docs/: codex_long_running_controller.md  csv_data_interface_plan.md  current_handoff.md  current_roadmap.md  current_roadmap_gap_refresh.md  decision_log.md  engineering_log.md  eodhd_data_quality_diagnostics_checkpoint.md  eodhd_factor_diagnostics_dry_run_checkpoint.md  eodhd_factor_diagnostics_experiment_log_checkpoint.md  eodhd_factor_diagnostics_readiness_review_checkpoint.md  eodhd_limited_factor_diagnostics_brief_checkpoint.md  eodhd_limited_factor_diagnostics_review_checkpoint.md  eodhd_loader_smoke_checkpoint_and_diagnostics_dry_run_plan.md  eodhd_local_csv_loader_smoke_test_plan.md  eodhd_local_csv_validation_handoff.md  factor_normalization_roadmap.md  full_repository_conformance_audit_2026-07-11.md  lean_implementation_planning_checkpoint.md  lean_parity_checklist.md  lean_runnable_draft_readiness_decision.md  lean_scaffold_review_checklist.md  lean_signal_only_draft_design.md  lean_smoke_test_design.md  liquidity_dollar_volume_universe_plan.md  liquidity_universe_backtest_integration_design.md  liquidity_universe_construction_design.md  local_csv_fixture_readiness_audit_rehearsal.md  local_csv_readiness_audit_report_template.md  local_csv_readiness_checkpoint.md  local_csv_readiness_input_checkpoint.md  local_csv_study_checklist.md  local_csv_validation_dry_run_intake_checklist.md  local_fixture_robustness_report_refresh_plan.md  original_goal_gap_analysis.md  phase_checkpoint_report.md  post_4h_checkpoint_report.md  post_alpha012_checkpoint_report.md  post_csv_checkpoint_report.md  post_liquidity_checkpoint_report.md  (+25 more)
lean/: README.md  signal_only_momentum_draft.py  smoke_test_algorithm.py
research/: __init__.py  (+12 more)
(+88 files in other folders)
