[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-equity-factor-research"
version = "0.1.0"
description = "A simulated, auditable equity factor research pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["factor-research", "quantitative-finance", "backtesting", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.urls]
Homepage = "https://github.com/minqiyang/equity-factor-research"
Repository = "https://github.com/minqiyang/equity-factor-research"
Issues = "https://github.com/minqiyang/equity-factor-research/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
